# hancom-toolkit

./: meson.build
build-aux/meson/: postinstall.py
data/: kr.hancom.toolkit.appdata.xml.in  kr.hancom.toolkit.autostart.desktop.in  kr.hancom.toolkit.desktop.in  kr.hancom.toolkit.gschema.xml  kr.hancom.toolkit.policy  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES.in  en_GB.po  ko.po
src/: .htoolkit-controller.c.swp  define.h  htoolkit-app-list.c  htoolkit-app-list.h  htoolkit-app-row.c  htoolkit-app-row.h  htoolkit-app.c  htoolkit-app.h  htoolkit-application.c  htoolkit-application.h  htoolkit-check  htoolkit-controller.c  htoolkit-controller.h  htoolkit-install  htoolkit-window.c  htoolkit-window.h  main.c  meson.build  utils.c  utils.h
src/resources/: hancom-toolkit-view-row-single.ui  hancom-toolkit-view-row-wrap.ui  hancom-toolkit-view-row.ui  hancom-toolkit-window.ui  hancom-toolkit.gresource.xml  hancom-toolkit.json  style.css  temp.ui
